[package]
name = "rumers"
version = "0.1.0"
authors = ["Adam Wolff <awolff@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pancurses = "0.16"
rodio = "0.13.0"
clap = { version = "4.4.2", features = ["derive"] }
